--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,16 @@
 ﻿<!DOCTYPE html> 
 <html lang="ko"> 
 <head> 
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S5DV2X6R12"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S5DV2X6R12');
+</script>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>꿈은 이루어진다 프리미엄 로또 조합번호</title> 
