--- a/index.htm
+++ b/index.htm
@@ -1,15 +1,14 @@
 ﻿<!DOCTYPE html> 
 <html lang="ko"> 
 <head> 
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S5DV2X6R12"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1NKL4KCTYT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S5DV2X6R12');
+  gtag('config', 'G-1NKL4KCTYT');
 </script>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
