--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,14 @@
 <html lang="ko"> 
 <head> 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1NKL4KCTYT"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TBK1R9VC27"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-1NKL4KCTYT');
+  gtag('config', 'G-TBK1R9VC27');
 </script>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
