--- a/index.htm
+++ b/index.htm
@@ -55,8 +55,8 @@
     <div class="img-container"> 
         <img src="Yjk1Q6L/image.jpg"> <!-- 이미지 주소 --> 
         <div class="link-wrapper"> 
-            <a href="http://qr.kakao.com/talk/J5zkHoxprYf0YaRA6Moi0xVRcNw-" target="_blank"></a> <!-- 클릭 후 이동되는 링크 --> 
-        <a href="http://qr.kakao.com/talk/J5zkHoxprYf0YaRA6Moi0xVRcNw-" target="_blank">
+            <a href="http://pf.kakao.com/_WDvLG/chat" target="_blank"></a> <!-- 클릭 후 이동되는 링크 --> 
+        <a href="http://pf.kakao.com/_WDvLG/chat" target="_blank">
          <img src="GQtC8bm/icon-kakao-1.jpg" alt="카카오톡" class="kakao-icon">
      </a> 
     </div> 
